--- a/libmachina/Makefile.in
+++ b/libmachina/Makefile.in
@@ -2,7 +2,7 @@ LIBRARY=machina
 
 CFLAGS+= -I$(SRCDIR) -Wno-prio-ctor-dtor
 
-SRCS+= syscalls.c
+SRCS+= syscalls.c mcn.c
 
 @COMPILE_LIBNUX_USER@
 @COMPILE_LIBEC@
