--- a/kern/Makefile.in
+++ b/kern/Makefile.in
@@ -9,4 +9,10 @@
 NOINST=y
 PROGRAM=machina
 
+# Add libkstest
+CFLAGS+=-I$(BUILDROOT)/tests/libkstest/kern -I$(SRCROOT)/tests/libkstest/kern
+LDFLAGS+=-L$(BUILDROOT)/tests/libkstest/kern/$(OBJDIR)
+LDADD+=-lks_kern
+LIBDEPS+=$(BUILDROOT)/tests/libkstest/kern/$(OBJDIR)/libks_kern.a
+
 SRCS+= main.c msgbuf.c physmem.c task.c vashare.c vmmap.c thread.c sysc.c ipc.c portspace.c port.c
