--- a/tests/libkutest/Makefile.in
+++ b/tests/libkutest/Makefile.in
@@ -7,8 +7,8 @@ KERNEL_SERVER_DEFS=ku.defs
 kern/%.c user/%.c kern/%.h user/%.h: $(SRCDIR)/%.defs @MIG@ @MIGCOM@ always_mig
 	@MIG@ -isystem $(SRCROOT)/include -server user/$*.c -user kern/$*.c -header kern/$*.h -sheader user/$*.h $<
 
-user: user/ks.c user/ks.h
-kern: kern/ks.c kern/ks.h
+user: user/ku.c user/ku.h
+kern: kern/ku.c kern/ku.h
 
-CLEAN_FILES+= kern/ks.c kern/ks.h user/ks.c user/ks.h
-ALL_TARGET+= kern/ks.c kern/ks.h
+CLEAN_FILES+= kern/ku.c kern/ku.h user/ku.c user/ku.h
+ALL_TARGET+= kern/ku.c kern/ku.h
