--- a/tests/test/Makefile.in
+++ b/tests/test/Makefile.in
@@ -30,6 +30,8 @@ PROGRAM=test
 SRCS+= main.c
 SRCS+= $(ARCH_DIR)/crt0.S
 
+@COMPILE_LIBCOMPAT_MACH3@
+@LINK_LIBCOMPAT_MACH3@
 @COMPILE_LIBMACHINA@
 @LINK_LIBMACHINA@
 @COMPILE_LIBNUX_USER@
