--- a/tests/libkstest/Makefile.in
+++ b/tests/libkstest/Makefile.in
@@ -6,10 +6,8 @@ KERNEL_SERVER_DEFS=ks.defs
 
 kern/%.c user/%.c kern/%.h user/%.h: $(SRCDIR)/%.defs @MIG@ @MIGCOM@ always_mig
 	@MIG@ -isystem $(SRCROOT)/include -server kern/$*.c -user user/$*.c -header user/$*.h -sheader kern/$*.h $<
-
-
 user: user/ks.c user/ks.h
 kern: kern/ks.c kern/ks.h
 
 CLEAN_FILES+= kern/ks.c kern/ks.h user/ks.c user/ks.h
-ALL_TARGET+= kern/ks.c kern/ks.h
+ALL_TARGET+= kern/ks.c kern/ks.h user/ks.c user/ks.h
