--- a/tools/mig/mig.in
+++ b/tools/mig/mig.in
@@ -105,6 +105,7 @@ do
 	-header ) header="$2"; migflags="$migflags $1 $2"; shift; shift;;
 	-sheader ) sheader="$2"; migflags="$migflags $1 $2"; shift; shift;;
 	-iheader ) iheader="$2"; migflags="$migflags $1 $2"; shift; shift;;
+	-32 ) migflags="$migflags $1"; cppflags="$cppflags -DMIG_32BIT"; shift;;
 
 	-isystem ) isystem="$2" ; cppflags="$cppflags $1 $2"; shift; shift;;
 	-MD ) sawMD=1; cppflags="$cppflags $1"; shift;;
