--- a/kern/Makefile.in
+++ b/kern/Makefile.in
@@ -1,13 +1,9 @@
 # Copyright (C) 2024 Gianluca Guida <glguida@tlbflush.org>
 #  SPDX-License-Identifier:	BSD-2-Clause
 
-@COMPILE_LIBEC@
-@COMPILE_LIBNUX@
-@LINK_LIBEC@
-@LINK_LIBNUX@
 
 NOINST=y
-PROGRAM=machina
+NUX_KERNEL=machina
 
 CFLAGS+=-I$(SRCDIR)
 
@@ -24,3 +20,8 @@ LDADD+=-lku_kern
 LIBDEPS+=$(BUILDROOT)/tests/libkutest/kern/$(OBJDIR)/libku_kern.a
 
 SRCS+= main.c msgbuf.c physmem.c memcache.c memctrl.c task.c vashare.c vmmap.c vmobj.c thread.c sysc.c ipc.c ipcspace.c port.c kern_ipc.c sched.c timer.c vmreg.c cacheobj.c imap.c
+
+@COMPILE_LIBEC@
+@COMPILE_LIBNUX@
+@LINK_LIBEC@
+@LINK_LIBNUX@
