--- a/tests/libkstest/user/Makefile.in
+++ b/tests/libkstest/user/Makefile.in
@@ -1,11 +1,14 @@
 LIBRARY=ks_user
-SRCS+= ks.c
+SRCS+= ks_user.c
+
+CFLAGS+=-I$(SRCDIR)/../include -I$(SRCDIR) -I$(BUILDDIR)
+SRCS+=kslib.c
 
 .PHONY: always_mig
 always_mig: @MIG@ @MIGCOM@
 
 %.c %.h: $(SRCDIR)/../%.defs always_mig
-	@MIG@ -isystem $(SRCROOT)/include -server /dev/null -user $*.c -header $*.h $<
+	@MIG@ -isystem $(SRCROOT)/include -server /dev/null -user $*_user.c -header $*_user.h $<
 
 @COMPILE_LIBMACHINA@
 @COMPILE_LIBNUX_USER@
