mig: Add -serverstub and -serverprefix arguments.
The "-serverstub" argument creates stub implementations of the server
routine implementations, thus allowing to compile a server mig file
when not all routines are implemented. The stub routines are weak
symbols, so they'll be discarded once an implementation is done.

The "-serverprefix" argument is equivalent to the 'serverprefix'
mig command, but defined from command line rather than from the
defs file.

--- a/tools/mig/mig.in
+++ b/tools/mig/mig.in
@@ -105,6 +105,8 @@ do
 	-header ) header="$2"; migflags="$migflags $1 $2"; shift; shift;;
 	-sheader ) sheader="$2"; migflags="$migflags $1 $2"; shift; shift;;
 	-iheader ) iheader="$2"; migflags="$migflags $1 $2"; shift; shift;;
+	-serverprefix ) migflags="$migflags $1 $2"; shift; shift;;
+	-serverstub ) migflags="$migflags $1"; shift;;
 	-32 ) migflags="$migflags $1"; cppflags="$cppflags -DMIG_32BIT"; shift;;
 
 	-I ) cppflags="$cppflags $1 $2"; shift; shift;;
