--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -18,7 +18,7 @@ jobs:
       uses: dawidd6/action-download-artifact@v2
       with:
         github_token: ${{ github.token }}
-        workflow: gcc-toolchain.yml
+        workflow: makefile.yml
         name: cross-toolchains
         repo: glguida/gcc_toolchain_build
         path: toolchain
