--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,7 +14,17 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Cache toolchain
+      id: cache-toolchain
+      uses: actions/cache@v3
+      with:
+        path: toolchain
+        key: ${{ runner.os }}-toolchain-${{ hashFiles('toolchain/**') }}
+        restore-keys: |
+          ${{ runner.os }}-toolchain-
+
     - name: Download GCC Toolchain
+      if: steps.cache-toolchain.outputs.cache-hit != 'true'
       uses: dawidd6/action-download-artifact@v2
       with:
         github_token: ${{ github.token }}
@@ -27,6 +37,10 @@ jobs:
       run: |
         echo "${{ github.workspace }}/toolchain/bin" >> $GITHUB_PATH
         chmod +x toolchain/bin/*
+
+    - name: Submodules fetch
+      run: |
+        git submodule update --init --recursive
 
     - name: Build AMD64
       run: |
